# Lethe

./: .gitignore  HOW_TO_RUN.md  README.md  plan.md  pyproject.toml  tree-3d-demo.html  weight-tree-demo.html
scripts/: _asset_library.json  _dump_models.py  _pick_medieval.py  _query_scene.py  _verify_table.py  build_medieval_town.py  build_recursive_v3.py  build_town_1000.py  build_town_v2.py  download_assets.py
src/lethe/: __init__.py  server.py  ws_server.py
ue-plugin/Lethe/: Lethe.uplugin
ue-plugin/Lethe/Content/Python/: init_unreal.py  lethe_menu.py
